flux/apps/syncthing/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: syncthing
  namespace: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      hostname: syncthing
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
        readOnlyRootFilesystem: true
      containers:
        - name: syncthing
          image: docker.io/syncthing/syncthing:2.1.5
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: http
              containerPort: 8384
              protocol: TCP # Web UI
            - name: tcp-sync
              containerPort: 22000
              protocol: TCP # TCP file transfers
            - name: quic-sync
              containerPort: 22000
              protocol: UDP # QUIC file transfers
            - name: discovery
              containerPort: 21027
              protocol: UDP # Receive local discovery broadcasts
          volumeMounts:
            - mountPath: /var/syncthing
              name: syncthing-config
            - mountPath: /mnt/retrogames
              name: retrogames
            - mountPath: /mnt/syncthing
              name: syncthing-data
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /rest/noauth/health
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "750M"
              cpu: ".5"
            limits:
              memory: "750M"
              cpu: ".5"

      volumes:
        - name: syncthing-config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: retrogames
          persistentVolumeClaim:
            claimName: retrogames
        - name: syncthing-data
          persistentVolumeClaim:
            claimName: syncthing-data
