flux/apps/syncthing/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing-web-route
  namespace: syncthing
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik

  hostnames:
    - syncthing.tartarus.us

  rules:
    - backendRefs:
        - name: syncthing
          port: 8384
