flux/apps/syncthing/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-web
  namespace: syncthing
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.tartarus.us`)
      kind: Rule
      services:
        - name: syncthing
          kind: Service
          port: http

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
